Add dataset-powered ingredient analysis + import script
